- Added single left click on vlc player debug mode - Fixed spinning wheel on mobile position - Fixed JAVA_HOME for tomcat startup script

--- a/kamehouse-ui/src/main/webapp/kamehouse/css/kamehouse-spinning-wheel.css
+++ b/kamehouse-ui/src/main/webapp/kamehouse/css/kamehouse-spinning-wheel.css
@@ -33,8 +33,8 @@
 
   .spinning-wheel-mobile {   
     display: block;
-    position: absolute;
-    margin-top: 350px;
+    position: fixed;
+    top: 350px;
     width: 50px;
     height: 50px;
     background-image: url("/kame-house/img/dbz/kamesenin-logo.png");
